# gbot

./: LICENSE  README.md
evaluation/: eval_calc_errors.py  vis_est_poses.py
gbot_tracking/: CMakeLists.txt
gbot_tracking/doc/html/: annotated.html  azure__kinect__camera_8h_source.html  basic__depth__renderer_8h_source.html  body_8h_source.html  camera_8h_source.html  classes.html  classm3t_1_1AzureKinect-members.html  classm3t_1_1AzureKinect.html  classm3t_1_1AzureKinectColorCamera-members.html  classm3t_1_1AzureKinectColorCamera.html  classm3t_1_1AzureKinectColorCamera__inherit__graph.map  classm3t_1_1AzureKinectColorCamera__inherit__graph.md5  classm3t_1_1AzureKinectDepthCamera-members.html  classm3t_1_1AzureKinectDepthCamera.html  classm3t_1_1AzureKinectDepthCamera__inherit__graph.map  classm3t_1_1AzureKinectDepthCamera__inherit__graph.md5  classm3t_1_1BasicDepthRendererCore-members.html  classm3t_1_1BasicDepthRendererCore.html  classm3t_1_1Body-members.html  classm3t_1_1Body.html  classm3t_1_1Camera-members.html  classm3t_1_1Camera.html  classm3t_1_1Camera__inherit__graph.map  classm3t_1_1Camera__inherit__graph.md5  classm3t_1_1ColorCamera-members.html  classm3t_1_1ColorCamera.html  classm3t_1_1ColorCamera__inherit__graph.map  classm3t_1_1ColorCamera__inherit__graph.md5  classm3t_1_1ColorHistograms-members.html  classm3t_1_1ColorHistograms.html  classm3t_1_1ColorViewer-members.html  classm3t_1_1ColorViewer.html  classm3t_1_1ColorViewer__inherit__graph.map  classm3t_1_1ColorViewer__inherit__graph.md5  classm3t_1_1Constraint-members.html  classm3t_1_1Constraint.html  classm3t_1_1DepthCamera-members.html  classm3t_1_1DepthCamera.html  classm3t_1_1DepthCamera__inherit__graph.map  classm3t_1_1DepthCamera__inherit__graph.md5  (+269 more)
gbot_tracking/doc/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  classes_3.js  classes_5.js  classes_7.js  classes_9.js  classes_c.js  enums_0.js  functions_0.js  functions_1.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js
gbot_tracking/examples/: CMakeLists.txt  common.hpp  evaluate_gbot_dataset.cpp  gbot_evaluator.cpp  gbot_evaluator.h  run_assembly_demo.cpp  yolov8-pose.hpp
gbot_tracking/include/m3t/: generator.h  hl2ss_mt.h  hololens_camera.h
gbot_tracking/src/: CMakeLists.txt  azure_kinect_multi.cpp  azure_kinect_multi2.cpp  hl2ss.cpp  hl2ss_lnm.cpp  hl2ss_mt.cpp  hololens_camera.cpp
yolov8pose/: our_camera.json  pnp.py  requirements.txt  visualization_helper_functions.py  yolo_to_pose_prediction_cv2.py  yolov8_pose_eval.py  yolov8_pose_training.py
yolov8pose/config/: CornerClamp.yaml  GearedCaliper.yaml  Hand_ScrewClamp.yaml  Nanovise.yaml
yolov8pose/extrem_downsampled_models_for_visualization/GearedCaliper/: Caliper_Fix_downsampled.ply  Caliper_Gear_1_downsampled.ply  Caliper_Gear_2_downsampled.ply  Caliper_Move_Bottom_downsampled.ply  Caliper_Move_Top_Vernier_downsampled.ply  Caliper_Roller_downsampled.ply
yolov8pose/extrem_downsampled_models_for_visualization/Hand_ScrewClamp/: HS_Jaw1_downsampled.ply  HS_Jaw2_downsampled.ply  HS_Knob1_downsampled.ply  HS_Knob2_downsampled.ply  HS_Pad_downsampled.ply  HS_Pin_downsampled.ply  HS_SlidingHinge1_downsampled.ply  HS_SlidingHinge2_downsampled.ply  HS_Thread1_downsampled.ply  HS_Thread2_downsampled.ply
yolov8pose/extrem_downsampled_models_for_visualization/HobbyCornerClamp/: Corner_Clamp_Base_downsampled.ply  Corner_Clamp_Bolt_downsampled.ply  Corner_Clamp_Jaw_downsampled.ply
yolov8pose/extrem_downsampled_models_for_visualization/NanoViseV2/: NanoViseV2_CLAMP_BALLJOINT_downsampled.ply  NanoViseV2_CLAMP_BASE_downsampled.ply  NanoViseV2_CLAMP_HEADPLATE_downsampled.ply  NanoViseV2_CLAMP_NUT_downsampled.ply  NanoViseV2_CLAMP_SCREW_downsampled.ply  NanoViseV2_Connector_downsampled.ply  NanoViseV2_VISE_BASE_downsampled.ply  NanoViseV2_VISE_SCREW_downsampled.ply  NanoViseV2_VISE_SLIDER_downsampled.ply
yolov8pose/models/GearedCaliper/: yolo_list.txt
yolov8pose/models/GearedCaliper/Keypoints/: Caliper_Fix_kps.txt  Caliper_Gear_1_kps.txt  Caliper_Gear_2_kps.txt  Caliper_Move_Bottom_kps.txt  Caliper_Move_Top_Vernier_kps.txt  Caliper_Roller_kps.txt
yolov8pose/models/GearedCaliper/models/: Caliper_Fix.ply  Caliper_Gear_1.ply  Caliper_Gear_2.ply  Caliper_Move_Bottom.ply  Caliper_Move_Top_Vernier.ply  Caliper_Roller.ply
yolov8pose/models/Hand_ScrewClamp/: yolo_list.txt
yolov8pose/models/Hand_ScrewClamp/Keypoints/: HS_Jaw1_kps.txt  HS_Jaw2_kps.txt  HS_Knob1_kps.txt  HS_Knob2_kps.txt  HS_Pad_kps.txt  HS_Pin_kps.txt  HS_SlidingHinge1_kps.txt  HS_SlidingHinge2_kps.txt  HS_Thread2_kps.txt
yolov8pose/models/Hand_ScrewClamp/models/: HS_Jaw1.ply  HS_Jaw2.ply  HS_Knob1.ply  HS_Knob2.ply  HS_Pad-Copy.ply  HS_Pin-Copy.ply  HS_SlidingHinge1.ply  HS_SlidingHinge2-Copy.ply  HS_Thread1.ply  HS_Thread2.ply
yolov8pose/models/HobbyCornerClamp/: yolo_list.txt
yolov8pose/models/HobbyCornerClamp/Keypoints/: Corner_Clamp_Base_kps.txt  Corner_Clamp_Bolt_kps.txt  Corner_Clamp_Jaw_kps.txt
yolov8pose/models/HobbyCornerClamp/models/: Corner_Clamp_Base.ply  Corner_Clamp_Jaw.ply
yolov8pose/models/Liftpod/: yolo_list.txt
yolov8pose/models/Liftpod/Keypoints/: Liftpod_armfirst_kps.txt  Liftpod_armlast_kps.txt  Liftpod_bar_kps.txt  Liftpod_baseplate_kps.txt  Liftpod_bolt_kps.txt  Liftpod_clampframe_kps.txt  Liftpod_clampslider_kps.txt  Liftpod_knob_kps.txt  Liftpod_sleeve_kps.txt  Liftpod_threadedknob_kps.txt
yolov8pose/models/Liftpod/models/: Liftpod_armfirst.ply  Liftpod_armlast-Copy.ply  Liftpod_bar.ply  Liftpod_baseplate.ply  Liftpod_bolt-Copy2.ply  Liftpod_clampframe.ply  Liftpod_clampslider.ply  Liftpod_knob.ply  Liftpod_sleeve.ply  Liftpod_threadedknob-Copy04.ply
yolov8pose/models/NanoViseV2/: yolo_list.txt
yolov8pose/models/NanoViseV2/Keypoints/: NanoViseV2_CLAMP_BALLJOINT_kps.txt  NanoViseV2_CLAMP_BASE_kps.txt  NanoViseV2_CLAMP_HEADPLATE_kps.txt  NanoViseV2_CLAMP_NUT_kps.txt  NanoViseV2_CLAMP_SCREW_kps.txt  NanoViseV2_Connector_kps.txt  NanoViseV2_VISE_BASE_kps.txt  (+2 more)
(+148 files in other folders)
